# syslog-ng

./: .astylerc  .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  NEWS.md  README.md  asd.py  autogen.sh  configure.ac  format-clang.sh  ssl_test.c  syslog-ng-config.h.in
.github/workflows/: devshell.yml  macos.yml  packages.yml
cmake/: BISON_GEN.cmake
contrib/: Brewfile  syslog-ng-gdb.py  syslog-ng.conf.HP-UX  syslog-ng.conf.RedHat  syslog-ng.conf.SunOS  syslog-ng.conf.doc
contrib/fedora-packaging/: syslog-ng.conf
dbld/: build.manifest  builddeps
dbld/images/: devshell.dockerfile
dev-utils/plugin_skeleton_creator/: plugin_template_grammar.ym
lib/: CMakeLists.txt  Makefile.am  afinter.c  cfg-block.c  cfg-block.h  cfg-grammar-internal.c  cfg-grammar-internal.h  cfg-grammar.y  cfg-lex.l  cfg-lexer-subst.c  cfg-lexer.c  cfg-lexer.h  cfg-parser.c  cfg-parser.h  cfg-tree.c  cfg-tree.h  cfg.c  cfg.h  driver.c  driver.h  dynamic-window-counter.c  dynamic-window-counter.h  dynamic-window.h  logqueue-fifo.c  logqueue-fifo.h  logreader.c  logreader.h  logsource.c  logsource.h  logthrdestdrv.c  logthrsourcedrv.c  logthrsourcedrv.h  logwriter.c  logwriter.h  messages.c  messages.h  ml-batched-timer.c  plugin.c  plugin.h  pragma-grammar.ym  (+4 more)
lib/ack-tracker/: late_ack_tracker.c
lib/filter/: filter-expr-grammar.ym
lib/filterx/: object-datetime.c  object-datetime.h  object-primitive.c  object-primitive.h  object-string.c
lib/http/: Makefile.am  README.md  buffer.h  http-errors.h  http-message-internal.h  http-message.c  http-message.h  http-parser.c  http-parser.h  http-status.h  logproto-http-server.c  logproto-http-server.h
lib/http/source/: Makefile.am  afinet-source.c  afinet-source.h  afinet.h  afsocket-grammar.ym  afsocket-parser.c  afsocket-plugin.c  afsocket-source.c  afsocket-source.h  http-source.c  http-source.h  socket-options-inet.c  socket-options-inet.h  socket-options.c  socket-options.h  transport-mapper-inet.c  transport-mapper-inet.h  transport-mapper.c  transport-mapper.h
lib/http/tests/: Makefile.am  test_http-message.c  test_http-parser.c
lib/logmsg/: logmsg.c  logmsg.h
lib/logproto/: CMakeLists.txt  Makefile.am  logproto-binary-test-server.c  logproto-binary-test-server.h  logproto-buffered-server.c  logproto-builtins.c  logproto-server.c  logproto-server.h  logproto-text-server.c
lib/logthrdest/: logthrdestdrv.c  logthrdestdrv.h
lib/logthrsource/: CMakeLists.txt  Makefile.am  logthrfetcher.c  logthrfetcher.h  logthrfetcherdrv.c  logthrfetcherdrv.h  logthrsourcedrv.c  logthrsourcedrv.h
lib/logthrsource/tests/: test_logthrfetcherdrv.c  test_logthrsourcedrv.c
lib/parser/: parser-expr-grammar.ym
lib/rewrite/: rewrite-expr-grammar.ym
lib/stats/: CMakeLists.txt  Makefile.am  stats-aggregator-register.c  stats-aggregator-registry.c  stats-aggregator-registry.h  stats-aggregator.c  stats-aggregator.h  stats-average.c  stats-change-per-second.c  stats-cluster-logpipe.c  stats-cluster-single.c  stats-cluster-single.h  stats-cluster.c  stats-cluster.h  stats-control.c  stats-counter.c  stats-counter.h  stats-csv.c  stats-log.c  stats-maximum.c  stats-query-commands.c  stats-query.c  stats-query.h  stats-registry.c  stats.c
lib/template/: eval.c
lib/tests/: CMakeLists.txt  Makefile.am  test_lexer.c  test_lexer_block.c  test_logsource.c  test_logthrsourcedrv.c  test_pragma.c
lib/timeutils/: unixtime.c  zoneinfo.c
lib/value-pairs/: value-pairs.c
libtest/: CMakeLists.txt  Makefile.am  config_parse_lib.c  cr_template.c  mock-cfg-parser.c  mock-cfg-parser.h  msg_parse_lib.c
modules/: CMakeLists.txt  Makefile.am
modules/add-contextual-data/: add-contextual-data-grammar.ym  context-info-db.c  context-info-db.h  contextual-data-record-scanner.c
modules/afamqp/: afamqp-grammar.ym
modules/affile/: affile-grammar.ym  file-signals.h  poll-file-changes.c  (+2 more)
modules/examples/sources/http/: Makefile.am  http-source-grammar.ym  http-source-parser.c  http-source-parser.h  http-source.c  http-source.h
modules/grpc/otel/: CMakeLists.txt  Makefile.am  otel-plugin.c
modules/grpc/otel/filterx/: CMakeLists.txt  Makefile.am  otel-logrecord.cpp  otel-logrecord.h  otel-logrecord.hpp  protobuf-field.cpp  protobuf-field.hpp
modules/grpc/otel/tests/: test-otel-protobuf-parser.cpp
modules/grpc/protos/: Makefile.am
modules/mranno/: Makefile.am  mranno-grammar.ym  mranno-parser.c  mranno-parser.h  mranno-plugin.c  mranno-source-options.h  mranno-source.c  mranno-source.h  mranno.c  mranno.h
modules/otel/: CMakeLists.txt  Makefile.am  grpc-thread.cpp  otel-protobuf-parser.cpp  otel-servicecall.hpp  otel-source-services.cpp  otel-source-services.hpp  otel-source.cpp
modules/otel/tests/: Makefile.am  test-otel-protobuf-parser.cpp
modules/wec/: Makefile.am  afinet-dest.c  afinet-dest.h  afinet-source.c  afinet-source.h  afinet.h  afunix-dest.c  afunix-dest.h  afunix-source.c  afunix-source.h  socket-options-inet.c  socket-options.c  socket-options.h  systemd-syslog-source.c  systemd-syslog-source.h  transport-mapper-inet.c  transport-mapper-inet.h  transport-unix-socket.h  wec-dest.c  wec-dest.h  wec-grammar.ym  wec-parser.c  wec-parser.h  wec-plugin.c  wec-source.c  wec-source.h  wec-systemd-override.h  wec.c  wec.h
modules/wec/tests/: Makefile.am  test-transport-mapper-inet.c  test-transport-mapper.c  transport-mapper-lib.h
news/: other-4054.md
tests/unit/: CMakeLists.txt  Makefile.am  README.md  a_cgreen_bdd.c  a_cgreen_dnscache.c  a_cgreen_example.c  a_cgreen_soft_mock.c  a_cgreen_tdd.c  a_cmocka_example.c  a_cmocka_key_value.c  a_cmocka_ringbuffer.c  a_criterion_example.c  a_criterion_example_report.c  a_criterion_example_theories.c  a_criterion_example_timesignal.c  a_criterion_findcrlf.c  a_criterion_matcher.c  a_gtest_example.cc  a_gtest_msgsdata.cc  a_unity_example.c  a_unity_serialize.c  d_cmocka_key_value.c  test_clone_logmsg.c  test_logqueue.c  test_logwriter.c  test_matcher.c  test_msgparse.c  test_msgsdata.c  test_nvtable.c  test_persist_state.c  test_ringbuffer.c  test_value_pairs.c  test_value_pairs_walk.c
(+135 files in other folders)
