logthrsourceincludedir = ${pkgincludedir}/logthrsource

EXTRA_DIST += lib/logthrsource/CMakeLists.txt

logthrsourceinclude_HEADERS = \
  lib/logthrsource/logthrsourcedrv.h \
  lib/logthrsource/logthrfetcher.h

logthrsource_sources = \
  lib/logthrsource/logthrsourcedrv.c \
  lib/logthrsource/logthrfetcher.c

include lib/logthrsource/tests/Makefile.am
