http_source_sources	= \
  lib/http/source/http-source.c \
  lib/http/source/http-source.h \
  lib/http/source/socket-options.c \
  lib/http/source/socket-options.h \
  lib/http/source/transport-mapper.c \
  lib/http/source/transport-mapper.h \
  lib/http/source/socket-options-inet.c \
  lib/http/source/socket-options-inet.h \
  lib/http/source/transport-mapper-inet.c \
  lib/http/source/transport-mapper-inet.h
